--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
   </head>
   <body>
     <div class="container-fluid">
-      <div class="row">
-       <div class="bg-primary text-white text-right border border-light col">BLOC 1</div>
-       <div class="bg-primary text-white text-right border border-light col">BLOC 2</div>
-       <div class="bg-primary text-white text-right border border-light col">BLOC 3</div>
-       <div class="bg-primary text-white text-right border border-light col">BLOC 4</div>
+      <div class="row bg-primary text-white text-lg-right text-left">
+       <div class="border border-light col">BLOC 1</div>
+       <div class="border border-light col">BLOC 2</div>
+       <div class="border border-light col">BLOC 3</div>
+       <div class="border border-light col">BLOC 4</div>
       </div>
-      <div class="row bg-warning text-white text-left">
-        <div class="border border-light col-lg-3">BLOC 5</div>
-        <div class="border border-light col-lg-2">BLOC 6</div>
-        <div class="border border-light col-lg-2">BLOC 7</div>
-        <div class="border border-light col-lg-2">BLOC 8</div>
-        <div class="border border-light col-lg-3">BLOC 9</div>
+      <div class="row bg-warning text-white text-lg-left text-center">
+        <div class="border border-light col-lg-3 col-12">BLOC 5</div>
+        <div class="border border-light col-lg-2 col-4">BLOC 6</div>
+        <div class="border border-light col-lg-2 col-4">BLOC 7</div>
+        <div class="border border-light col-lg-2 col-4">BLOC 8</div>
+        <div class="border border-light col-lg-3 col-12">BLOC 9</div>
       </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
