--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <body>
     <div class="container-fluid">
       <div class="row bg-primary text-white text-lg-right text-left">
-       <div class="border border-light col">BLOC 1</div>
-       <div class="border border-light col">BLOC 2</div>
-       <div class="border border-light col">BLOC 3</div>
-       <div class="border border-light col">BLOC 4</div>
+       <div class="border border-light col col-lg-3 col-sm-6">BLOC 1</div>
+       <div class="border border-light col col-lg-3 col-sm-6">BLOC 2</div>
+       <div class="border border-light col col-lg-3 col-sm-6">BLOC 3</div>
+       <div class="border border-light col col-lg-3 col-sm-6">BLOC 4</div>
       </div>
       <div class="row bg-warning text-white text-lg-left text-center">
         <div class="border border-light col-lg-3 col-12">BLOC 5</div>
